--- a/package.json
+++ b/package.json
@@ -8,18 +8,28 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@element-plus/nuxt": "^1.0.3",
     "nuxt": "^3.2.0"
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
+    "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
+    "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.6",
+    "@tiptap/pm": "^2.0.0-beta.220",
+    "@tiptap/starter-kit": "^2.0.0-beta.220",
+    "@tiptap/vue-3": "^2.0.0-beta.220",
+    "@vueup/vue-quill": "^1.1.1",
+    "devextreme": "22.2.4",
+    "devextreme-vue": "22.2.4",
+    "element-plus": "^2.2.33",
     "path": "^0.12.7",
     "pinia": "^2.0.30",
     "postcss": "^8.4.21",
+    "remixicon": "^2.5.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "v-tooltip": "^2.1.3",
-    "vite-svg-loader": "^4.0.0",
     "vuetify": "^3.1.4",
     "vuex": "^4.1.0"
   }
