--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@tiptap/vue-3": "^2.0.0-beta.220",
     "@vueup/vue-quill": "^1.1.1",
+    "axios": "^1.3.4",
     "devextreme": "22.2.4",
     "devextreme-vue": "22.2.4",
     "element-plus": "^2.2.33",
