--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
-    "@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
+    "@nuxt/types": "^2.16.3",
+    "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.6",
     "@tiptap/pm": "^2.0.0-beta.220",
@@ -22,10 +23,16 @@
     "@tiptap/vue-3": "^2.0.0-beta.220",
     "@vueup/vue-quill": "^1.1.1",
     "axios": "^1.3.4",
+    "cookie": "^0.5.0",
+    "cookie-universal-nuxt": "^2.2.2",
+    "cookielib": "^1.1.3",
     "devextreme": "22.2.4",
     "devextreme-vue": "22.2.4",
     "element-plus": "^2.2.33",
     "file-loader": "^6.2.0",
+    "firebase": "^9.19.0",
+    "jsonwebtoken": "^9.0.0",
+    "nuxt-vuefire": "^0.1.6",
     "path": "^0.12.7",
     "pinia": "^2.0.30",
     "postcss": "^8.4.21",
@@ -34,6 +41,9 @@
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
     "v-tooltip": "^2.1.3",
+    "vue-cookies": "^1.8.3",
+    "vue3-cookies": "^1.0.6",
+    "vuefire": "^3.1.0",
     "vuetify": "^3.1.4",
     "vuex": "^4.1.0"
   }
