--- a/package.json
+++ b/package.json
@@ -8,43 +8,45 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@element-plus/nuxt": "^1.0.3",
+    "@element-plus/nuxt": "^1.0.4",
     "@nuxtjs/svg": "^0.4.0",
-    "nuxt": "^3.2.0"
+    "nuxt": "^3.3.3"
   },
   "dependencies": {
-    "@mdi/font": "^7.1.96",
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/interaction": "^6.1.5",
+    "@fullcalendar/list": "^6.1.5",
+    "@fullcalendar/timegrid": "^6.1.5",
+    "@fullcalendar/vue3": "^6.1.5",
+    "@mdi/font": "^7.2.96",
     "@nuxt/types": "^2.16.3",
+    "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/auth-next": "5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
-    "@pinia/nuxt": "^0.4.6",
-    "@tiptap/pm": "^2.0.0-beta.220",
-    "@tiptap/starter-kit": "^2.0.0-beta.220",
-    "@tiptap/vue-3": "^2.0.0-beta.220",
+    "@pinia/nuxt": "^0.4.8",
+    "@tiptap/pm": "^2.0.2",
+    "@tiptap/starter-kit": "^2.0.2",
+    "@tiptap/vue-3": "^2.0.2",
     "@vueup/vue-quill": "^1.1.1",
-    "axios": "^1.3.4",
-    "cookie": "^0.5.0",
-    "cookie-universal-nuxt": "^2.2.2",
-    "cookielib": "^1.1.3",
-    "devextreme": "22.2.4",
-    "devextreme-vue": "22.2.4",
-    "element-plus": "^2.2.33",
+    "devextreme": "22.2.5",
+    "devextreme-vue": "22.2.5",
+    "element-plus": "^2.3.3",
     "file-loader": "^6.2.0",
-    "firebase": "^9.19.0",
-    "jsonwebtoken": "^9.0.0",
-    "nuxt-vuefire": "^0.1.6",
+    "firebase": "^9.19.1",
     "path": "^0.12.7",
-    "pinia": "^2.0.30",
+    "pinia": "^2.0.34",
     "postcss": "^8.4.21",
     "raw-loader": "^4.0.2",
-    "remixicon": "^2.5.0",
-    "sass": "^1.58.3",
-    "sass-loader": "^13.2.0",
+    "remixicon": "^3.1.1",
+    "sass": "^1.61.0",
+    "sass-loader": "^13.2.2",
     "v-tooltip": "^2.1.3",
+    "vee-validate": "4.8.4",
     "vue-cookies": "^1.8.3",
-    "vue3-cookies": "^1.0.6",
-    "vuefire": "^3.1.0",
-    "vuetify": "^3.1.4",
-    "vuex": "^4.1.0"
+    "vue-full-calendar": "^2.8.1-0",
+    "vuetify": "^3.1.13",
+    "vuex": "^4.1.0",
+    "yup": "^1.0.2"
   }
 }
