--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mdi/font": "^7.2.96",
     "@nuxt/types": "^2.16.3",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/meta": "^3.0.0-beta.16",
     "@pinia/nuxt": "^0.4.8",
     "@tiptap/pm": "^2.0.2",
     "@tiptap/starter-kit": "^2.0.2",
